--- a/VulkanLearning/VK_glfw_glm_x64_debug.props
+++ b/VulkanLearning/VK_glfw_glm_x64_debug.props
@@ -3,7 +3,7 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <IncludePath>$(VULKAN_SDK)\Include;$(SolutionDir)Extensions\glm\include;$(SolutionDir)Extensions\glfw\include;$(SolutionDir)Extensions\stb_image\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(VULKAN_SDK)\Include;$(SolutionDir)Extensions\glm\include;$(SolutionDir)Extensions\glfw\include;$(SolutionDir)Extensions\stb_image\include;$(SolutionDir)Extensions\tinyobjloader\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(VULKAN_SDK)\Lib;$(SolutionDir)Extensions\glm\lib\debug;$(SolutionDir)Extensions\glfw\lib\debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup>
