--- a/VulkanLearning/VulkanLearning.vcxproj
+++ b/VulkanLearning/VulkanLearning.vcxproj
@@ -160,7 +160,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
-    <ClCompile Include="VulkanLearning.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.hpp" />
