--- a/VkRenderer/VkRenderer.vcxproj
+++ b/VkRenderer/VkRenderer.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{3A4E5907-D082-4426-BCA5-1C9E9F729CEC}</ProjectGuid>
+    <ProjectGuid>{E53DBE30-2239-436D-B173-2A41C9723134}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>VulkanLearning</RootNamespace>
+    <RootNamespace>VkRenderer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
